# raman_fitting

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  justfile  pyproject.toml
.github/workflows/: build-test-codecov.yml  test-release-candidate.yaml  upload-to-testpypi.yml
docs/: docker.md
src/raman_fitting/: __about__.py  __init__.py  types.py
src/raman_fitting/config/: __init__.py  base_settings.py  filepath_helper.py  load_config_from_toml.py  logging_config.py  path_settings.py
src/raman_fitting/config/default_models/: first_order.toml  low_first_order.toml  normalization.toml  second_order.toml  spectrum_regions.toml
src/raman_fitting/delegating/: main_delegator.py  pre_processing.py  run_fit_spectrum.py
src/raman_fitting/delegators/: main_delegator.py  pre_processing.py  run_fit_spectrum.py
src/raman_fitting/exports/: exporter.py  models.py  plot_formatting.py  plotting_fit_results.py  plotting_raw_data.py
src/raman_fitting/imports/: collector.py  models.py  selectors.py  spectrumdata_parser.py
src/raman_fitting/imports/files/: file_finder.py  file_indexer.py  index_funcs.py  utils.py
src/raman_fitting/imports/samples/: sample_id_helpers.py
src/raman_fitting/imports/spectrum/: datafile_parser_utils.py  datafile_parsers.py  datafile_schema.py  parse_spectrum.py  spectra_collection.py  validators.py
src/raman_fitting/interfaces/: typer_cli.py
src/raman_fitting/models/: fit_models.py  selectors.py  spectrum.py  splitter.py
src/raman_fitting/models/deconvolution/: base_model.py  base_peak.py  init_models.py  spectrum_regions.py
src/raman_fitting/processing/: baseline_subtraction.py  despike.py  filter.py  normalization.py  post_processing.py
src/raman_fitting/utils/: __init__.py  string_operations.py
tests/: conftest.py  test_package_import.py
tests/deconvolution_models/: test_base_model.py  test_base_peaks.py  test_fit_models.py
tests/delegating/: test_main_delegator.py
tests/indexing/: test_filename_parser.py
tests/interfaces/: test_typer_cli.py
tests/models/: test_base_peak.py  test_fit_models.py
tests/processing/: test_spectrum_constructor.py
